--- a/src/Components/FilterForm/FilterForm.module.scss
+++ b/src/Components/FilterForm/FilterForm.module.scss
@@ -23,25 +23,6 @@
   padding-left: 20px;
 }
 
-input {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  appearance: none;
-  border: 1px solid $blue;
-  border-radius: 2px;
-}
-
-.input-chek::after {
-  position: absolute;
-  content: '✓';
-  top: 12px;
-  left: 25px;
-  width: 12px;
-  height: 8px;
-  color: $blue;
-}
-
 .checkbox {
   display: flex;
   align-items: center;
@@ -49,6 +30,18 @@ input {
   justify-content: flex-start;
   column-gap: 10px;
   padding: 10px 0 10px 20px;
+  & > input {
+    display: none;
+  }
+  input:checked + .checkboxDisplay::after {
+    position: absolute;
+    content: '✓';
+    top: 12px;
+    left: 25px;
+    width: 12px;
+    height: 8px;
+    color: $blue;
+  }
 }
 
 .checkbox p {
@@ -58,4 +51,12 @@ input {
 .checkbox:hover {
   cursor: pointer;
   background-color: $light-blue;
+}
+.checkboxDisplay {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  appearance: none;
+  border: 1px solid $blue;
+  border-radius: 2px;
 }
